ik2227-project/shared/clusterb/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm
  namespace: llm-ns
spec:
  ports:
    - port: 8000
      targetPort: 8080
      protocol: TCP
  selector:
    app: llm
