ik2227-project/shared/clusterb/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-ing
  namespace: llm-ns
spec:
  ingressClassName: nginx
  rules:
  - host: clusterb.com
    http:
      paths:
      - pathType: Prefix
        path: /completion
        backend:
          service:
            name: llm
            port:
              number: 8000
